--- a/clients/src/styles/Login.css
+++ b/clients/src/styles/Login.css
@@ -5,7 +5,7 @@
   }
 
   .container{
-    background-color: black !important;
+    /* background-color: black !important; */
     position: relative;
     display: flex;
     justify-content: center;
