--- a/clients/src/Componentes/Admin/Admin.css
+++ b/clients/src/Componentes/Admin/Admin.css
@@ -1,5 +1,5 @@
 .makeStyles-drawerPaper-74 {
-    width: 240px;
+    width: 200px;
     position: relative;
     transition: width 225ms cubic-bezier(0.4, 0, 0.6, 1) 0ms;
     white-space: nowrap;
@@ -13,9 +13,33 @@
      border-right: 1px solid rgba(0, 0, 0, 0.12);
 }  */
 
+.makeStyles-content-12 {
+    height: 100vh;
+    overflow: auto;
+    flex-grow: 1;
+    background-image: url(https://images.pexels.com/photos/1089438/pexels-photo-1089438.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+}
+
 .MuiDrawer-paperAnchorLeft {
     left: 0;
     right: auto;
+}
+
+.MuiTypography-colorTextSecondary {
+   
+        color: #000000;
+}
+/* *, *::before, *::after {
+    box-sizing: inherit;
+    border-color: purple;
+    color: black;
+} */
+.makeStyles-drawerPaper-9 {
+    width: 240px;
+    position: relative;
+    transition: width 225ms cubic-bezier(0.4, 0, 0.6, 1) 0ms;
+    white-space: nowrap;
+    background-color: black;
 }
 .MuiSvgIcon-root {
     /* fill: currentColor; */
@@ -39,6 +63,7 @@
     overflow-y: auto;
     flex-direction: column;
     -webkit-overflow-scrolling: touch;
+
 }
 
 .MuiPaper-elevation0 {
@@ -217,7 +242,12 @@ html {
 .MuiTypography-displayBlock {
     display: block;
 }
-
+/* 
+*, ::after, ::before {
+    box-sizing: border-box;
+    color: black;
+  
+} */
 
 .MuiListItem-root {
     width: 100%;
@@ -273,7 +303,7 @@ a:-webkit-any-link {
     cursor: pointer;
 }
 .MuiList-root {
-    margin: 0;
+    margin: 8;
     padding: 0;
     position: relative;
     list-style: none;
@@ -296,15 +326,16 @@ ul {
 
 
 
-body {
+.body {
     /* color: rgba(0, 0, 0, 0.87); */
     margin: 0;
     font-size: 0.875rem;
     font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-    font-weight: 400;
+    font-weight: 500;
     line-height: 1.43;
     letter-spacing: 0.01071em;
-    background-color: #fafafa;
+    background-color: #9c7b7b;
+    color: "yellow";
 }
 body {
     margin: 0;
@@ -337,18 +368,25 @@ constructed stylesheet *, *::before, *::after {
     box-sizing: inherit;
     border-color: purple;
 }
-
+.MuiTypography-colorTextSecondary {
+    color: rgba(0, 0, 0, 0.87);
+}
 .MuiSvgIcon-root {
-    fill: currentColor;
+    /* fill: currentColor; */
     width: 1em;
     height: 1em;
     display: inline-block;
-    font-size: 1.5rem;
+    font-size: 3.5rem;
     transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     flex-shrink: 0;
     user-select: none;
+    /* background-color: "black"; */
+    /* background-image: url(https://www.solidbackgrounds.com/images/2560x1440/2560x1440-yellow-solid-color-background.jpg); */
 }
 
+.slideout-sidebar{
+    font-family: 'Courier New', Courier, monospace;
+}
 
 
 
