--- a/clients/src/Componentes/Student/Student.css
+++ b/clients/src/Componentes/Student/Student.css
@@ -3,9 +3,16 @@
    /* justify-content: center !important; */
    text-align: center;
    background-color: "black"!important;
+   
 }
 
-
+/* .modulos{
+  
+  /* justify-content: center !important; */
+  /* text-align: center;
+  background-color: "black"!important; */
+  /* margin-left: -15%; */
+/* } */
 
 
 
@@ -16,7 +23,7 @@
   
   .category .title {
     font-size: 2rem;
-    font-weight: 500;
+    font-weight: 40;
     text-align: center;
     margin-bottom: 3rem;
   }
@@ -25,20 +32,23 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
-    margin-left: 15%;
+    margin-left: 40%;
+    height: 20%;
     border: 1px solid transparent; 
-    width: 60%;
+    width: 30%;
     align-items: center;
-
+    box-shadow: black;
+    margin-top: 5%;
   }
   
   .category-box {
     position: relative;
-    border-radius: 0.5rem;
-    height: 18rem; 
-    width: 18rem; 
+    /* border-radius: 0.5rem; */
+    height: 20rem; 
+    width: 20rem; 
     overflow: hidden;
     z-index: 1;
+    box-shadow: black
   }
   
   .category-box::after {
@@ -80,10 +90,12 @@
     text-align: center !important;
     margin-bottom: 0.5rem;
      color: white;
+     background-color: transparent;
   }
 
   .category-box .content .link {
     color: white;
+    background-color: transparent;
   }
   
   .category-box .content span {
@@ -105,10 +117,10 @@
     background-color: var(--black);
   }
   
-  @media only screen and (max-width: 1200px) {
+  /* @media only screen and (max-width: 1200px) {
     .category-box .content h2 {
       font-size: 2rem;
-    }
+    } */
   
     .category-box .content span {
       font-size: 1.5rem;
@@ -119,7 +131,11 @@
       font-size: 1.5rem;
       padding: 0.5rem 1.1rem;
     }
-  
+   
+    .btn{
+      background-color: transparent;
+      border-color:black;
+    }
 
     .modulos {
       width: 80%;
@@ -130,7 +146,7 @@
    }
 
    
-   }
+   
    /* .progressbar div li{
     float: left;
     width: 20%;
@@ -140,6 +156,18 @@
     font-size: 0.9em;
 
   } */
+  /* *::before, *::after {
+    box-sizing: inherit;
+    border-color: transparent;
+    color: black;
+} */
+
+.btn-light {
+   border: transparent;
+   color: white;
+   width: 5%;
+   height: 5%;
+}
 
    .progressbar div li{
     float: left;
@@ -177,10 +205,10 @@
     top: 15px;
     left: -50%;
     z-index: -1;
-    display: flex;
+    /* display: flex;
     justify-content: space-evenly;
     flex-direction: row;
-    text-align: center;
+    text-align: center; */
   }
   .progressbar{
       color: silver; 
@@ -188,9 +216,13 @@
     justify-content: space-evenly;
     flex-direction: row;
     text-align: center;
-    border-color: black;
+    margin-left: -20%;
+    margin-top: 0em;
     }
    .contenedor {
      margin-left: -8%;
     
+   }
+   .meta{
+      border-color: yellow;
    }
