--- a/clients/src/styles/login.module.css
+++ b/clients/src/styles/login.module.css
@@ -1,27 +1,24 @@
 @media screen and (max-width: 800px) {
-    .div_container {
-      width: 100%; 
-    }
+  .div_container {
+    width: 100%;
   }
-
-
-
-  .container{
-    background-color: black !important;
-    position: relative;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 643px;
-    
 }
 
-.sing_in{
+.container {
+  background-color: black !important;
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 643px;
+}
+
+.sing_in {
   display: block;
   justify-content: center;
   align-content: space-around;
   border: 0.25px gray solid;
-  box-shadow: 10px 40px 5px 0px rgba(0,0,0,0.35);
+  box-shadow: 10px 40px 5px 0px rgba(0, 0, 0, 0.35);
   border-radius: 8px;
   width: min-content;
   margin: auto;
@@ -29,37 +26,35 @@
   margin-bottom: 3vh;
   height: 33.2vh;
   padding: 1.5vh;
-  background-color:rgb(255, 255, 1);
-  
+  background-color: rgb(255, 255, 1);
 }
 
 .submit {
-    background-color: white;
-    border: 2px gray solid;
-    border-radius: 10px;
-    color: black;
-    position: center;
-    margin: auto;
-    margin-top: 3vh;
-    margin-bottom: 3vh;
-    justify-content: space-around;
-    display: flex;
-    flex-direction: column;
-    bottom: 200px;
-    left: 70px;
-    cursor: pointer;
-    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.35)
+  background-color: white;
+  border: 2px gray solid;
+  border-radius: 10px;
+  color: black;
+  position: center;
+  margin: auto;
+  margin-top: 3vh;
+  margin-bottom: 3vh;
+  justify-content: space-around;
+  display: flex;
+  flex-direction: column;
+  bottom: 200px;
+  left: 70px;
+  cursor: pointer;
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.35);
 }
 
 .submit:hover {
-    background-color: #8D99AE;
-    border: black solid 1px;
+  background-color: #8d99ae;
+  border: black solid 1px;
 }
 
-.text h6{
+.text h6 {
   /* background-color: violet; */
   font-size: 60px;
   color: wheat;
   margin: 0px !important;
-  
 }
