--- a/clients/src/styles/perfilUser.module.css
+++ b/clients/src/styles/perfilUser.module.css
@@ -8,34 +8,89 @@
     width: 100%;
     display: flex;
     justify-content:  center;
-    height: 400px;
+    /* height: 450px; */
     padding-bottom: 20px;
 }
 .cont_print .cont_info{
-    background-color: white;
-    width: 80%;
+    /* background-color: white; */
+    width: 70%;
     height: 100%;
     display: flex;
+    justify-content: space-between;
     
     
 }
-.cont_print .cont_info .info{
+.cont_print .cont_info .perfil{
+    width: 70%;
+    height: 200px;
+    /* border: 1px solid red; */
+}
+.cont_print .cont_info .perfil .img{
     width: 100%;
+    height: 90%;
+    background-color: blue;
+    border: 1px solid blue;
+    border-radius: 100%;
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
+.cont_print .cont_info .perfil .nombre{
+    width: 100%;
+    height: 10%;
+}
+.cont_print .cont_info .perfil h1{
+    font-size: 1em;
+    margin: 0px;
+    text-align: center;
+}
+
+.cont_print .cont_info .info{
+    background-color: white;
+    width: 30%;
     height: 100%;
     /* border: 1px solid red; */
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     
 }
-.form{
+.cont_print .cont_info .info2{
+    background-color: white;
+    width: 69%;
+    height: 100%;
+    /* border: 1px solid blue; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+.cont_print .cont_info .info .form{
     padding: 20px;
     display: flex;
     flex-direction: column;
-    border: 1px solid black;
-    width: 20%;
+    /* border: 1px solid black; */
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    
 }
-.form h1{
+.cont_print .cont_info .info2 .form{
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    /* border: 1px solid black; */
+    width: 100%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    
+}
+.cont_print .cont_info .info .form h1{
+    margin: 0px;
+    font-size: 1.5em;
+    text-align: center;
+}
+.cont_print .cont_info .info2 .form h1{
     margin: 0px;
     font-size: 1.5em;
     text-align: center;
