--- a/clients/src/styles/email.module.css
+++ b/clients/src/styles/email.module.css
@@ -1,5 +1,7 @@
 .emails {
   width: 50%;
+  margin-left: auto !important;
+  margin-right: auto !important;
   background-color: black;
   border: 2px solid#000;
   box-shadow: black;
