--- a/clients/src/styles/perfilUser.module.css
+++ b/clients/src/styles/perfilUser.module.css
@@ -7,14 +7,43 @@
     background-color: #EDEDED;
     width: 100%;
     display: flex;
-    justify-content:  center;
+    justify-content: center;
     /* height: 450px; */
     padding-bottom: 20px;
 }
+.todo{
+    width: 70%;
+    /* border: 1px solid red; */
+}
+.butons{
+    width: 100%;
+    /* border: 1px solid blue; */
+    margin-top: 10px;
+    display: flex;
+    justify-content: flex-end;
+}
+.butons .button{
+    background-color: yellow;
+    margin-right: 20px;
+    font-weight: bold !important;
+    border: none;
+}
+.butons .button:hover{
+    background-color: yellow;
+}
+.butons .button2{
+    background-color: black;
+   color: white;
+   margin-right: 20px;
+}
+.butons .button2:hover{
+    background-color: black;
+}
+
 .cont_print .cont_info{
     /* background-color: white; */
-    width: 70%;
-    height: 100%;
+    width: 100%;
+    /* height: 100%; */
     display: flex;
     justify-content: space-between;
     
@@ -28,11 +57,18 @@
 .cont_print .cont_info .perfil .img{
     width: 100%;
     height: 90%;
-    background-color: blue;
+    /* background-color: blue;
     border: 1px solid blue;
-    border-radius: 100%;
+    border-radius: 100%; */
     margin-bottom: 5px;
     margin-top: 5px;
+    display: flex;
+    justify-content: center;
+}
+.cont_print .cont_info .perfil .img img{
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 100%;
 }
 .cont_print .cont_info .perfil .nombre{
     width: 100%;
@@ -58,7 +94,7 @@
 .cont_print .cont_info .info2{
     background-color: white;
     width: 69%;
-    height: 100%;
+    height: 544px;
     /* border: 1px solid blue; */
     display: flex;
     flex-direction: column;
@@ -94,4 +130,17 @@
     margin: 0px;
     font-size: 1.5em;
     text-align: center;
+}
+.infoHenry{
+    padding-left: 8px;
+}
+.infoHenry label{
+    margin-top: 15px;
+    margin-bottom: 0px;
+    color: rgba(0, 0, 0, 0.54);
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-size: 0.8rem;
+}
+.desac{
+    color: black !important;
 }
