--- a/clients/src/Componentes/Admin/Admin.css
+++ b/clients/src/Componentes/Admin/Admin.css
@@ -47,8 +47,8 @@
 
 .MuiPaper-root {
     /* color:black; */
-    transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-    background-color: #fff;
+    /* transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    background-color: #fff; */
 }
 constructed stylesheet
 *, *::before, *::after {
