--- a/clients/src/Componentes/Chat/PopOver.css
+++ b/clients/src/Componentes/Chat/PopOver.css
@@ -1,6 +1,7 @@
 .boton__chat{
-    height: 70px;
-    width: 70px;
+    font-weight: bold;
+    height: 60px;
+    width: 60px;
     border-radius: 50%;
     background-color: yellow;
     border: 2px solid black;
