--- a/clients/src/Componentes/Student/Student.css
+++ b/clients/src/Componentes/Student/Student.css
@@ -7,103 +7,64 @@
   /* background-color: blue; */
 }
 .conten_taks{
+  margin: auto;
+  width: 85%;
   /* border: 1px solid red; */
   display: flex;
   justify-content: space-around;
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
-.category .title {
-  font-size: 2rem;
-  font-weight: 40;
-  text-align: center;
-  margin-bottom: 3rem;
-}
-
 .category-box {
+  background-color: red;
+  background-blend-mode: soft-light;
+  height: 370px;
+  width: 340px;
   position: relative;
-  /* border-radius: 0.5rem; */
-  height: 20rem;
-  width: 20rem;
-  overflow: hidden;
-  /* z-index: 1; */
-  box-shadow: black;
-}
-
-.category-box::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-image: linear-gradient(
-    to right,
-    rgba(0, 0, 0, 0.4) 30%,
-    transparent
-  );
-  z-index: 2;
+  display: inline-block;
 }
 
 .category-box img {
-  height: 27rem;
   width: 100%;
-  transform: scale(1);
-  transition: all 500ms linear;
-}
-
-.category-box:hover img {
-  transform: scale(1.1);
+  height: 100%;
 }
 
 .category-box .content {
   position: absolute;
-  top: 30%;
+  top: 5%;
   left: 5%;
-  color: var(--white);
-  z-index: 4;
-}
+  width: 90%;
+  height: 80%;
+  border: 1px solid white;
 
+}
 .category-box .content h2 {
-  font-weight: 500;
-  text-align: center !important;
-  margin-bottom: 0.5rem;
+  font-size: 25px;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
   color: white;
-  background-color: transparent;
+  text-align: center;
+  margin-top: 5%;
 }
 
-.category-box .content .link {
+.category-box .content .boton_link{
+  background-color: black;
+  border: 1px solid white;
+  width: 230px;
+  height: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  margin-top: 76%;
+}
+.category-box .content .boton_link .link{
   color: white;
-  background-color: transparent;
+  font-size: 15px;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
 }
 
-.category-box .content span {
-  display: block;
-  margin-bottom: 1rem;
-}
-
-.category-box .content a {
-  display: inline-block;
-  color: var(--white);
-  text-transform: uppercase;
-  padding: 0.7rem 1.3rem;
-  border: 1px solid var(--white);
-  transition: all 300ms linear;
-}
-
-.category-box:hover a {
-  border: 1px solid var(--black);
-  background-color: var(--black);
-}
-.category-box .content span {
-  font-size: 1.5rem;
-  margin-left: 110%;
-}
-
-.category-box .content a {
-  font-size: 1.5rem;
-  padding: 0.5rem 1.1rem;
-}
 
 .btn {
   background-color: transparent;
