--- a/clients/src/Componentes/modulo/Modulo.css
+++ b/clients/src/Componentes/modulo/Modulo.css
@@ -1,8 +1,13 @@
+.cont_videos{
+    /* background-color: red; */
+    width: 100%;
+
+}
 .videos{
-    max-width: 60%;
+    /* background-color: blue; */
+    max-width: 100%;
     display: grid;
-    margin-left: auto;
-    margin-right: auto;
+    text-align: center;
     padding: 0px !important;
     grid-template-columns: repeat(3, 2fr);
     grid-template-rows: repeat(4, 1fr);
@@ -19,7 +24,7 @@
     margin-bottom: 20px !important;
 }
 .boton{
-    margin-left: 20%;
+    margin-left: 5%;
     margin-top: 20px;
 }
 .bot{
