--- a/clients/src/styles/email.module.css
+++ b/clients/src/styles/email.module.css
@@ -32,6 +32,7 @@
   width: 100%;
   color: white;
   background-color: white;
+  border-radius: 7px;
 }
 .editar {
   color: black;
@@ -40,4 +41,15 @@
 .delete {
   color: black;
   cursor: pointer;
+}
+.h3{
+  font-size: 1.2em;
+}
+.cont_email{
+  width: 100%;
+}
+.cont_email h1{
+  text-align: center;
+  font-size: 2em;
+  margin-bottom: 25px;
 }
