--- a/clients/src/styles/login.module.css
+++ b/clients/src/styles/login.module.css
@@ -5,35 +5,61 @@
 }
 
 .container {
-  background-color: black !important;
+  background-image: url("../Componentes/utils/registro.jpg");
+  background-color: rgb(80, 80, 80);
+  background-blend-mode: soft-light;
   position: relative;
   display: flex;
   justify-content: space-around;
   align-items: center;
   height: 643px;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  
 }
+
 
 .sing_in {
   display: block;
   justify-content: center;
   align-content: space-around;
   border: 0.25px gray solid;
+  border-top: none;
   box-shadow: 10px 40px 5px 0px rgba(0, 0, 0, 0.35);
-  border-radius: 8px;
+  border-radius: 0px 0px 8px 8px;
   width: min-content;
   margin: auto;
-  margin-top: 3vh;
+  /* margin-top: 3vh; */
   margin-bottom: 3vh;
   /* height: 33.2vh; */
   padding: 1.5vh;
-  background-color: rgb(255, 255, 1);
+  background-color: white;
+
+}
+.cont_titleForm{
+  width: 100%;
+  height: 60px;
+  background-color: black;
+  color: white;
+  border: 0.25px gray solid;
+  border-bottom: none;
+  box-shadow: 10px 40px 5px 0px rgba(0, 0, 0, 0.35);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px 8px 0px 0px;
+}
+.cont_titleForm h6{
+  font-size: 2em;
+  font-weight: bold;
+  font-family: 'Times New Roman', Times, serif;
 }
 
+
 .submit {
-  background-color: white;
-  border: 2px gray solid;
-  border-radius: 10px;
-  color: black;
+  width: 100%;
+  height: 35px;
+  border-radius: 8px;
   position: center;
   margin: auto;
   margin-top: 3vh;
@@ -45,11 +71,16 @@
   left: 70px;
   cursor: pointer;
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.35);
+  font-weight: bold;
+  background-color:rgb(255, 255, 1);
+  border: none;
+  color:black;
 }
 
 .submit:hover {
-  background-color: #8d99ae;
-  border: black solid 1px;
+  background-color: rgb(255, 255, 1);
+  border: none;
+  color: black;
 }
 
 .text h6 {
