--- a/clients/src/Componentes/login/Login2.css
+++ b/clients/src/Componentes/login/Login2.css
@@ -1,148 +1,197 @@
-
 .align {
-  display: flex;
-  place-items: center;
-  box-sizing: inherit;
-  background-color:  #2c3338;
-  color: #606468;
-  font-size: 0.875rem;
-  font-weight: 400;
-  height: 100%;
-  line-height: 1.5;
-  margin: 0;
-  min-height: 100vh;
+    display: flex;
+    place-items: center;
+    box-sizing: inherit;
+    background-color: #2c3338;
+    color: #606468;
+    font-size: 0.875rem;
+    font-weight: 400;
+    height: 100%;
+    line-height: 1.5;
+    margin: 0;
+    min-height: 100vh;
 }
 
 .grid {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 20rem;
-  width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 20rem;
+    width: 90%;
 }
 
 .hidden {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
 }
 
 .icons {
-  display: none;
+    display: none;
 }
 
 .icon {
-  display: inline-block;
-  fill:  #606468;
-  font-size: 1rem;
-  height: 1em;
-  vertical-align: middle;
-  width: 1em;
+    display: inline-block;
+    fill: #606468;
+    font-size: 1rem;
+    height: 1em;
+    vertical-align: middle;
+    width: 1em;
 }
 
 html {
-  box-sizing: border-box;
-  font-size: 100%;
-  height: 100%;
+    box-sizing: border-box;
+    font-size: 100%;
+    height: 100%;
 }
-
 
 
 /* modules/form.css */
 
-
 input {
-  background-image: none;
-  border: 0;
-  color: inherit;
-  font: inherit;
-  margin: 0;
-  outline: 0;
-  padding: 0;
-  transition: background-color 0.3s;
+    background-image: none;
+    border: 0;
+    color: inherit;
+    font: inherit;
+    margin: 0;
+    outline: 0;
+    padding: 0;
+    transition: background-color 0.3s;
 }
 
 input[type='submit'] {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .form {
-  margin: calc(0.875rem * -1);
+    margin: calc(0.875rem * -1);
 }
 
 .form input[type='password'],
 .form input[type='text'],
 .form input[type='submit'] {
-  width: 100%;
+    width: 100%;
 }
 
 .form__field {
-  display: flex;
-  margin: 0.875rem;
+    display: flex;
+    margin: 0.875rem;
 }
 
 .form__input {
-  flex: 1;
+    flex: 1;
 }
 
-
 .login {
-  color:  #eee;
+    color: #eee;
 }
 
 .login label,
 .login input[type='text'],
 .login input[type='password'],
 .login input[type='submit'] {
-  border-radius: 0.25rem;
-  padding: 1rem;
+    border-radius: 0.25rem;
+    padding: 1rem;
 }
 
 .login label {
-  background-color: #363b41;
-  border-bottom-right-radius: 0;
-  border-top-right-radius: 0;
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
+    background-color: #363b41;
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
 }
 
 .login input[type='password'],
 .login input[type='text'] {
-  background-color: #363b41;
-  border-bottom-left-radius: 0;
-  border-top-left-radius: 0;
+    background-color: #363b41;
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
 }
 
 .login input[type='password']:focus,
 .login input[type='password']:hover,
 .login input[type='text']:focus,
 .login input[type='text']:hover {
-  background-color: #434a52;
+    background-color: #434a52;
 }
 
 .login input[type='submit'] {
-  background-color: #eaee1b;
-  color: rgb(44, 44, 44);;
-  font-weight: 700;
-  text-transform: uppercase;
+    background-color: #eaee1b;
+    color: rgb(44, 44, 44);
+    ;
+    font-weight: 700;
+    text-transform: uppercase;
 }
 
 .login input[type='submit']:focus,
 .login input[type='submit']:hover {
-  background-color:  #92940f;
+    background-color: #92940f;
 }
+
 
 /* modules/text.css */
 
 p {
-  margin-bottom: 1.5rem;
-  margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    margin-top: 1.5rem;
 }
 
 .text--center {
-  text-align: center;
+    text-align: center;
+}
+
+.btn-alternativo {
+    width: 93%;
+    border: none;
+    padding: 10px 0;
+    border-radius: 4px;
+    margin: 10px auto;
+    cursor: pointer;
+    transition: 0.4s all;
+    font-weight: 600;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
+
+#github {
+    background: #3b5998;
+    opacity: 1;
+    padding: 0px 0;
+    color: rgb(44, 44, 44);
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+#goog {
+    background: #fff;
+    opacity: 1;
+    padding: 0px 0;
+    color: #000;
+}
+
+.btn-alternativo p {
+    margin-top: 10px;
+    margin-left: 10px;
+    padding-top: 5px;
+    padding-bottom: 0px;
+    color: #000;
+    text-decoration: none;
+}
+
+.btn-alternativo img {
+    margin-left: 10px;
+    padding-bottom: 0px;
+    width: 23px;
+}
+
+a {
+    text-decoration: none;
 }
