--- a/clients/src/styles/email.module.css
+++ b/clients/src/styles/email.module.css
@@ -1,22 +1,23 @@
+.cont_prinEmail{
+  width: 60%;
+  background-color: white;
+  margin: auto;
+  padding-bottom: 5%;
+}
 .emails {
-  width: 50%;
-  margin-left: auto !important;
-  margin-right: auto !important;
-  background-color: black;
-  border: 2px solid#000;
-  box-shadow: black;
-  padding: 2 4 3;
-  top: 50%;
-  border-radius: 10px;
-  left: 50%;
-  margin: 10px;
+  width: 80%;
+ margin: auto;
+ border-radius: 8px 8px 8px 8px;
+ border: 1px solid black;
 }
 .table {
   background-color: white;
+  padding: 0%;
 }
 .add {
   color: #ffff01;
   margin: 2px;
+  margin-right: 15px;
   cursor: pointer;
 }
 .aceptar {
@@ -34,13 +35,17 @@
   background-color: white;
   border-radius: 7px;
 }
+
 .editar {
+  font-size: 1.4em;
   color: black;
   cursor: pointer;
+
 }
 .delete {
   color: black;
   cursor: pointer;
+  font-size: 1.4em;
 }
 .h3{
   font-size: 1.2em;
@@ -52,4 +57,31 @@
   text-align: center;
   font-size: 2em;
   margin-bottom: 25px;
+}
+.titleEmail h3{
+  color: black;
+  font-size: 1.4em;
+  margin-bottom: 0px;
+  border: 1px solid black;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  background-color: rgb(189, 184, 184);
+
+}
+.acciones{
+  /* background-color: red; */
+  width: 30%;
+  border: 1px solid black;
+}
+.emailNew{
+  border: 1px solid black;
+
+}
+.addEmail{
+  background-color: black;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  border-radius: 0px 0px 8px 8px;
 }
